Adição do strategy para recomendações de eventos esportivos